spacing fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,22 @@
 html {
     margin: 0 auto;
+    font-family: 'Roboto', sans-serif;
+}
+
+h1 {
+    font-size: 28px;
+}
+
+h3 {
+    font-size: 22px;
+}
+
+h4 {
+    font-size: 20px;
+}
+
+p {
+    font-size: 16px;
 }
 
 /*Header section*/
@@ -76,6 +93,12 @@ nav a:hover {
     color: white;
     border-radius: 2px;
     border: 0;
+    font-size: 20px;
+}
+
+.banner-text button:hover {
+    background-color: rgb(68, 68, 68);
+    box-shadow: 1px 2px rgb(78, 78, 78);
 }
 
 /*Articles section*/
@@ -92,6 +115,11 @@ nav a:hover {
 .main-art img {
     width: 100%;
     height: auto;
+}
+
+.main-text span {
+    font-weight: bold;
+    font-size: 14px;
 }
 
 .side-arts {
@@ -112,8 +140,20 @@ nav a:hover {
     margin: 16px;
 }
 
+.side-art h4 {
+    margin: 8px 0;
+}
+
 .side-art p {
     margin: 8px 0;
+}
+
+.side-art a {
+    text-decoration: none;
+}
+
+.side-art a:hover {
+    text-decoration: underline;
 }
 
 .mobile-img {
@@ -147,25 +187,42 @@ nav a:hover {
 
 .card {
     background-color: white;
-    max-width: 30%;
+    max-width: 28%;
     margin: 16px 16px;
     border-radius: 2px;
 }
 
-@media screen and (max-width: 1088px) {
+@media screen and (max-width: 1120px) {
     .card {
         max-width: 45%;
     }
+
+    .learning {
+        padding: 32px 16px 16px;
+    }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 790px) {
     .card {
-        max-width: 95%;
+        max-width: 80%;
     }
 }
 
 .card-text {
     padding: 16px;
+    line-height: 1.3;
+}
+
+.card-text h4 {
+    margin: 0 0 12px;
+}
+
+.card-text span {
+    margin: 8px 0;
+}
+
+.card-text p {
+    margin: 8px 0;
 }
 
 .card img {
@@ -198,6 +255,10 @@ nav a:hover {
 
 .exhib-text {
     margin: 24px 0px;
+}
+
+.exhib-text h3 {
+    margin: 0;
 }
 
 .exhib-text p {
@@ -309,6 +370,9 @@ footer a:hover {
         background-color: rgb(150, 150, 150);
         margin: 24px auto 32px auto;
         width: 100%;
+    }
+    .banner-text button:hover {
+        background-color: rgb(138, 138, 138);
     }
 
     /*Articles section*/
